--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-iframe": "^1.8.5",
     "react-query": "^3.39.2",
     "redis": "^4.5.0",
     "socket.io": "^4.5.3",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "4.9.3"
